LMSA-8534 - rivet2 conversion

--- a/src/main/resources/templates/react.html
+++ b/src/main/resources/templates/react.html
@@ -7,7 +7,7 @@
     <title>IU Photo Roster</title>
 <!--    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>-->
 <!--    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>-->
-    <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet-bundle.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet.min.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/app/css/photoroster.css}"/>
     <link rel="stylesheet" type="text/css" media="print" th:href="@{/app/css/print.css}"/>
 </head>
@@ -15,7 +15,7 @@
 
 <div id="root"></div>
 
-<footer class="rvt-ts-12 rvt-container rvt-m-top-lg">
+<footer class="rvt-ts-12 rvt-m-top-lg">
     <div id="footer" th:text="${@serverInfo}"></div>
 </footer>
 
@@ -29,10 +29,12 @@
        /*]]>*/
 </script>
 
-<script th:src="@{/app/jsreact/lms-lti-photoroster/lms-lti-photoroster.js}"></script>
-<script type="text/javascript" th:src="@{/app/jsrivet/rivet-bundle.min.js}"></script>
+<script type="text/javascript" th:src="@{/app/jsrivet/rivet.min.js}"></script>
 <script type="text/javascript" th:src="@{/app/webjars/jquery/jquery.min.js}"></script>
-
+<script type="text/javascript" th:src="@{/app/jsreact/lms-lti-photoroster/lms-lti-photoroster.js}"></script>
+<script>
+    Rivet.init();
+</script>
 
 </body>
 </html>
