--- a/src/main/resources/static/css/photoroster.css
+++ b/src/main/resources/static/css/photoroster.css
@@ -1,5 +1,5 @@
-button.transparencyOverride, input[type=text].transparencyOverride {
-    background-color: #FFFFFF;
+.transparencyOverride {
+    background-color: #fff;
 }
 
 .currentViewColor {
@@ -10,16 +10,13 @@ button.transparencyOverride, input[type=text].transparencyOverride {
     display: inline-table;
     width: 214px;
     height: 290px;
+    background-color: #fff;
 }
 
 .photoListPanel {
     width: 600px;
     min-height: 140px;
-}
-
-.cardPanelPaddingOverride {
-    padding: 1.5rem 0.5rem 1.0rem 0.50rem;
-
+    background-color: #fff;
 }
 
 .twentyfive-percent {
@@ -120,8 +117,7 @@ div.ferpa-CanvasAvatar, img.image-CanvasAvatar {
 }
 
 .loader_container {
-    display: flex;
-    align-items: center;
+    justify-content: center;
 }
 
 .actionBar {
