LMSA-8534 - cursor refactor

--- a/src/main/resources/static/css/photoroster.css
+++ b/src/main/resources/static/css/photoroster.css
@@ -149,7 +149,7 @@ div.ferpa-CanvasAvatar, img.image-CanvasAvatar {
     }
 }
 
-.ie11CursorOverride {
+.pointerOverride {
     cursor: pointer;
 }
 
