--- a/src/main/resources/templates/react.html
+++ b/src/main/resources/templates/react.html
@@ -38,8 +38,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IU Photo Roster</title>
-<!--    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>-->
-<!--    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet-bundle.min.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/app/css/photoroster.css}"/>
     <link rel="stylesheet" type="text/css" media="print" th:href="@{/app/css/print.css}"/>
