--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -36,7 +36,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Error</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet-bundle.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/app/jsrivet/rivet.min.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/app/css/photoroster.css}"/>
     <link rel="stylesheet" type="text/css" media="print" th:href="@{/app/css/print.css}"/>
 </head>
@@ -44,7 +44,7 @@
 <!-- This page is a generic 403 error for the LMS LTI App tool. -->
 <h1>Error</h1>
 <h2>Something bad happened.</h2>
-<script type="text/javascript" th:src="@{/app/jsrivet/rivet-bundle.min.js}"></script>
+<script type="text/javascript" th:src="@{/app/jsrivet/rivet.min.js}"></script>
 <script type="text/javascript" th:src="@{/app/webjars/jquery/jquery.min.js}"></script>
 </body>
 </html>
