LMSA-8599 / LMSA-9064 - various photoroster rivet2 changes and adding the scroll to top component

--- a/src/main/resources/templates/react.html
+++ b/src/main/resources/templates/react.html
@@ -64,6 +64,7 @@
 
 <script th:src="@{/app/jsreact/lms-lti-photoroster/lms-lti-photoroster.js}"></script>
 <script type="text/javascript" th:src="@{/app/jsrivet/rivet.min.js}"></script>
+<script type="text/javascript" defer th:src="@{/app/jsrivet/scrolltotop/scrolltotop.js}"></script>
 <script type="text/javascript" th:src="@{/app/webjars/jquery/jquery.min.js}"></script>
 <script>
     Rivet.init();
